--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,19 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "parser": "babelParser",
+  "parserOptions": { 
+    "parser": "@typescript-eslint/parser" 
+  },
+  "plugins": ["@typescript-eslint", "prettier"],
+  "rules": {
+    "camelcase": 0,
+    "react/prop-types": 0,
+    "no-console": [2, { "allow": ["error"] }],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  }
 }
