--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -24,6 +25,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
-    "typescript": "5.0.2"
+    "typescript": "4.9.5"
   }
 }
